k8s-manifests/prod/NodeJS-App-QA-Yaml-Manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: 339713166619.dkr.ecr.us-east-1.amazonaws.com/my-ecr-repo:prod-1fad2e8d34d0d6b5a5f6321e51eeea5bc61b0b38
        ports:
        - containerPort: 5000
